--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,5 @@ spring.datasource.password=admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
+
+spring.jpa.open-in-view= true
